--- a/raww/Magento_Theme/templates/footer/top_image.phtml
+++ b/raww/Magento_Theme/templates/footer/top_image.phtml
@@ -1,8 +1,22 @@
+<?php
+    $controllerName = $this->getRequest()->getRouteName();
+    if ($controllerName == 'cms') {
+?>
 <div class="footer-top__image">
+    <?php
+    } else { ?>
+<div class="footer-top__image" style="opacity: 0;">
+<?php } ?>
     <?php 
         echo $block->getLayout()
         ->createBlock('Magento\Cms\Block\Block')
         ->setBlockId('raww-footer_top-image')
+        ->toHtml()
+    ?>
+    <?php 
+        echo $block->getLayout()
+        ->createBlock('Magento\Cms\Block\Block')
+        ->setBlockId('raww-footer_top-image_mobile')
         ->toHtml()
     ?>
 </div>
