--- a/raww/Magento_Theme/templates/footer/top_text.phtml
+++ b/raww/Magento_Theme/templates/footer/top_text.phtml
@@ -1,8 +1,27 @@
-<div class="footer-top__text">
-    <?php 
-        echo $block->getLayout()
-        ->createBlock('Magento\Cms\Block\Block')
-        ->setBlockId('raww-footer_top-text')
-        ->toHtml()
-    ?>
-</div>
+
+<?php
+    $controllerName = $this->getRequest()->getRouteName();
+    if ($controllerName == 'cms') {
+?>
+   <div class="footer-top__text">
+        <?php 
+            echo $block->getLayout()
+            ->createBlock('Magento\Cms\Block\Block')
+            ->setBlockId('raww-footer_top-text_cms')
+            ->toHtml()
+        ?>
+    </div>
+<?php 
+    } else {
+?>
+   <div class="footer-top__text">
+        <?php 
+            echo $block->getLayout()
+            ->createBlock('Magento\Cms\Block\Block')
+            ->setBlockId('raww-footer_top-text')
+            ->toHtml()
+        ?>
+    </div>
+<?php
+    }
+?>
