--- a/raww/Magento_Theme/web/css/source/_footer.less
+++ b/raww/Magento_Theme/web/css/source/_footer.less
@@ -2,17 +2,23 @@
 @color-header_top-mobile: #e1cfcd;
 @font-size-19: 19px;
 @font-size-23: 23px;
+@font-size-25: 25px;
 @color-footer_top-bg: #ead5d3;
+@line-height-10: 10px;
 //
 //  Common
 //  _____________________________________________
 
 & when (@media-common = true) {
-    .page-footer {
-        margin: 0;
-    }
-    
     .footer-top {
+        background-color: @color-footer_top-bg;
+        line-height: @line-height-10;
+        position: relative;
+        &__content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
         &__image {
             img {
                 width: 100%;
@@ -20,12 +26,8 @@
         }
         &__text {
             text-align: center;
-            h1 {
-                font-weight: 600;
-            }
             span {
                 display: block;
-                line-height: 26px;
             }
         }
         .block.newsletter .action.subscribe i {
@@ -101,6 +103,7 @@
     }
 
     .copyright {
+        width: 100%;
         &__text p {
             letter-spacing: -.1px;
             margin: 0;
@@ -120,24 +123,36 @@
 //
 //  Mobile
 //  _____________________________________________
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__380) {
+    .footer-top__text {
+        h1, span {
+            line-height: 20px;
+        }
+    }
+}
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .page-footer {
-        margin-top: 829px;
+        margin-top: 1px;
     }
     .footer-top-middle {
         display: flex;
-        flex-direction: column-reverse;
+        // flex-direction: column-reverse;
+        flex-direction: column;
     }
     
     .footer-top {
-        &__image {
-            display: none;
+        .fti {
+            &-desktop {
+                display: none;
+            }
+            &-mobile {
+                display: block;
+                max-height: 300px;
+            }
         }
         &__content {
-            position: unset;
-            transform: unset;
-            background-color: @color-footer_top-bg;
+            transform: translate(-50%, -50.1%);
             width: 100%;
         }
         &__text {
@@ -145,22 +160,24 @@
             padding-top: 30px;
         }
         h1 {
-            color: @button__color-raw;
             font-size: @font-size-24;
             letter-spacing: 0;
             margin: 0;
+            font-weight: 600;
         }
         &__text span {
-            color: @button__color-raw;
             font-size: @font-size-16;
             letter-spacing: .1px;
+            line-height: 26px;
         }
     }
     
     .footer-middle {
-        border-top: 3px solid @color-gray-darken0;
+        // border-top: 3px solid @color-gray-darken0;
+        border-bottom: 3px solid @color-gray-darken0;
         ul {
-            margin: 30px 0 5px 20px;
+            // margin: 30px 0 5px 20px;
+            margin: 28px 0 5px 20px;
             li {
                 margin: 0 0 23px;
                 width: 50%;
@@ -186,7 +203,8 @@
     .footer-nav {
         border-bottom: 1px solid @color-gray-darken0;
         flex-wrap: wrap;
-        padding: 20px 20px 31px;
+        // padding: 20px 20px 31px;
+        padding: 12px 20px 31px;
         ul {
             margin: 0;
         }
@@ -195,7 +213,7 @@
             margin: 0 0 -3px -1px;
         }
         .item {
-            padding: 7px 0 5px;
+            padding: 6px 0;
             &.difference {
                 order: 1;
                 width: 59%;
@@ -221,7 +239,7 @@
     .copyright {
         flex-direction: column;
         &__text {
-            margin: 3px 0 28px;
+            margin: 2px 0 28px;
         }
         &__logo ul {
             justify-content: center;
@@ -238,15 +256,30 @@
 //  _____________________________________________
 
 & when (@media-target = 'desktop'), (@media-target = 'all') {
+    @media only screen and (min-width: @screen__m) and (max-width: @screen__xl) {
+        .footer-middle ul {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 19px 0 10px;
+            li {
+                float: none;
+                margin-right: 0;
+            }
+        }
+        .block.newsletter {
+            #newsletter {
+                padding: 25px 18px;
+                font-size: @font-size-15;
+            }
+        }
+    }
+}
+
+& when (@media-target = 'desktop'), (@media-target = 'all') {
     @media only screen and (min-width: @screen__m) and (max-width: @screen__l) {
         .page-footer {
             padding-bottom: 18px;
-            // margin-top: 1527px;
         }
-
-        // .copyright.page-main {
-        //     margin-bottom: 500px;
-        // }
 
         .footer-top-middle {
             display: flex;
@@ -254,28 +287,24 @@
         }
         
         .footer-top {
-            padding: 20px;
-            &__image {
-                display: none;
+            margin: 20px;
+            .fti-desktop {
+                height: 246px;
             }
             &__content {
-                position: unset;
-                transform: unset;
-                background-color: @color-footer_top-bg;
                 width: 100%;
+                transform: translate(-50%, -45.75%);
             }
             &__text, h1 {
                 margin: 0;
             }
             h1 {
-                color: @button__color-raw;
                 font-size: @font-size-19;
                 letter-spacing: .35px;
                 line-height: @line-height-30;
-                padding-top: 34px;
+                padding-top: 30px;
             }
             span {
-                color: @button__color-raw;
                 font-size: @font-size-15;
                 line-height: @line-height-20;
                 letter-spacing: -0.125px;
@@ -300,11 +329,6 @@
                 .mage-error[generated] {
                     position: absolute;
                 }
-            }
-            #newsletter {
-                border: unset;
-                padding: 25px 18px;
-                font-size: @font-size-15;
             }
             .action {
                 position: absolute;
@@ -341,7 +365,7 @@
 
         .footer-nav {
             flex-wrap: wrap;
-            margin-top: -130px;
+            margin-top: -115px;        
             .item {
                 padding: 19px 0 0;
                 &.social {
@@ -375,22 +399,8 @@
             }
         }
 
-        .copyright.page-main {
+        .copyright.page-main-copy {
             padding: 32px 11px 32px 9px;
-        }
-    }
-}
-
-& when (@media-target = 'desktop'), (@media-target = 'all') {
-    @media only screen and (min-width: @screen__m) and (max-width: @screen__xl) {
-        .footer-middle ul {
-            display: flex;
-            justify-content: space-between;
-            padding: 0 19px 0 10px;
-            li {
-                float: none;
-                margin-right: 0;
-            }
         }
     }
 }
@@ -400,32 +410,33 @@
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
-    // .page-footer {
-    //     margin-top: 3818px;
-    // }
-
+    .page-footer {
+        margin: 0;
+    }
     .footer-top {
-        margin-bottom: -4px;
-        position: relative;
+        .fti-mobile {
+            display: none;
+        }
         &__content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             width: 40%;
+            transform: translate(-50%, -48.75%);
+            // position: absolute;
+            // top: 50%;
+            // left: 50%;
+            // transform: translate(-50%, -48.75%);
         }
         &__text {
             margin-top: 6.5%;   
             h1 {
                 margin: -30px 12px 0 -1px;
-                color: @color-white;
                 letter-spacing: -0.4px;
+                font-weight: 600;
             }
             span {
-                padding: 0.3% 15% 0.7% 16%;
-                color: @color-white;
+                padding: 0.3% 15% 1% 16%;
                 font-size: 18px;
                 letter-spacing: 0.055px;
+                line-height: 26px;
             }
         }
     }
