Update 14/05: Color variables, style-guide and theme variables

--- a/raww/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/raww/Magento_Checkout/web/css/source/module/_minicart.less
@@ -9,11 +9,7 @@
 
 @minicart__border-color: @color-gray80;
 @minicart__padding-horizontal: @indent__base;
-
 @minicart-qty__height: 20px;
-@color-fff: #fff;
-@minicart-qty__bg: #8b7f71;
-@color-eee: #eee;
 
 //
 //  Common
@@ -197,7 +193,7 @@
                     // .lib-css(background, @active__color);
                     // .lib-css(color, @page__background-color);
                     .lib-css(background, @minicart-qty__bg);
-                    .lib-css(color, @color-fff);
+                    .lib-css(color, @color-white);
                     .lib-css(height, @minicart-qty__height);
                     .lib-css(line-height, @minicart-qty__height);
                     border-radius: 50%;
