--- a/raww/Magento_Cms/templates/banner.phtml
+++ b/raww/Magento_Cms/templates/banner.phtml
@@ -23,7 +23,7 @@
       $(".banner-slider").slick({
         dots: false,
         infinite: true,
-        autoplay: true,
+        autoplay: false,
         autoplaySpeed: 2500,
         arrows: false,
         fade: true,
