--- a/raww/web/css/source/_styleguide.less
+++ b/raww/web/css/source/_styleguide.less
@@ -218,7 +218,7 @@
     line-height: @line-height-20;
     color: @button__color-raw;
   }
-  input[type="text"],
+  input[type="text"], input[type="email"],
   select {
     .lib-input-placeholder(@color-999);
     .lib-css(border, 2px solid @color-ede);
