--- a/raww/web/css/source/lib/variables/_colors.less
+++ b/raww/web/css/source/lib/variables/_colors.less
@@ -30,6 +30,11 @@
 @color-header_top-mobile: #e1cfcd;
 @color-footer_top-bg: #ead5d3;
 @color-header_top-bg: #e9d5d2;
+@color-newsletter-text: #777;
+
+
+@minicart-qty__bg: #8b7f71;
+@color-eee: #eee;
 //message
 @color-green-message: #68c524;
 @color-red-validate: #ed1313;
@@ -127,6 +132,7 @@
 @color-yellow-light2: #ffee9c;
 @color-yellow-light3: #d6ca8e;
 @color-yellow1: #ff0;
+
 
 //
 //  Color nesting
