--- a/raww/Magento_Cms/web/css/source/_extend.less
+++ b/raww/Magento_Cms/web/css/source/_extend.less
@@ -1,8 +1,3 @@
-@font-size-64: 64px;
-@font-size-39: 39px;
-@font-size-54: 54px;
-@line-height-44: 44px;
-
 //
 //  Common
 //  _____________________________________________
@@ -46,15 +41,14 @@
     .banner-slider__button {
         a {
             border: none;
+            color: @button__color-raw;
             font-size: @font-size-16;
-            line-height: @line-height-20;
             text-align: center;
             text-decoration: none;
             border-radius: 3px;
             padding: 16px 0px 14px;
             display: block; 
             letter-spacing: 0.25px;
-            font-family: @font-family-name__avenir-roman;
         }
         &:hover a {
             border: none;
