--- a/raww/web/css/source/_theme.less
+++ b/raww/web/css/source/_theme.less
@@ -16,8 +16,10 @@
 //  ---------------------------------------------
 @font-size-100: 100px;
 @font-size-84: 84px;
+@font-size-64: 64px;
 @font-size-54: 54px;
 @font-size-42: 42px;
+@font-size-39: 39px;
 @font-size-32: 32px;
 @font-size-28: 28px;
 @font-size-24: 24px;
@@ -32,9 +34,11 @@
 @font-size-10: 10px;
 @font-size-19: 19px;
 @font-size-23: 23px;
+@font-size-25: 25px;
 
 @font-weight-800: 800;
 
+@line-height-10: 10px;
 @line-height-14: 14px;
 @line-height-15: 15px;
 @line-height-16: 16px;
@@ -42,6 +46,7 @@
 @line-height-24: 24px;
 @line-height-28: 28px;
 @line-height-42: 42px;
+@line-height-44: 44px;
 @line-height-74: 74px;
 @line-height-75: 75px;
 @line-height-80: 80px;
