Update 02/06: Edit page-main css

--- a/raww/Magento_Cms/templates/shop_instagram.phtml
+++ b/raww/Magento_Cms/templates/shop_instagram.phtml
@@ -1,4 +1,4 @@
-<div class="shop-instagram page-main-copy">
+<div class="shop-instagram page-main">
     <?php 
         echo $block->getLayout()
         ->createBlock('Magento\Cms\Block\Block')
