--- a/raww/Magento_Cms/web/css/source/_extend.less
+++ b/raww/Magento_Cms/web/css/source/_extend.less
@@ -3,7 +3,7 @@
 //  _____________________________________________
 
 & when (@media-common = true) {
-    body.cms-index-index .page-wrapper .page-main {
+    body.cms-index-index .page-wrapper #maincontent {
         max-width: 100%;
         padding: 0;
     }
@@ -111,7 +111,7 @@
 
     // Shop Instagram Css
     .shop-instagram {
-        &.page-main-copy {
+        &.page-main {
             padding: 0;
         }
         h1 {
