--- a/raww/Magento_Theme/web/css/source/_footer.less
+++ b/raww/Magento_Theme/web/css/source/_footer.less
@@ -392,7 +392,7 @@
             }
         }
 
-        .copyright.page-main-copy {
+        .copyright.page-main {
             padding: 32px 11px 32px 9px;
         }
     }
