Update 04/06: Add best seller section - Homepage

--- a/raww/Magento_Theme/layout/default.xml
+++ b/raww/Magento_Theme/layout/default.xml
@@ -58,5 +58,8 @@
                 <block class="Magento\Framework\View\Element\Template" name="footer.nav.block" template="Magento_Theme::footer/nav.phtml" />
             </container>
         </referenceContainer>
+        <referenceContainer name="before.body.end">
+              <block class="Magento\Framework\View\Element\Template" name="category_button" before="-" template="Magento_Theme::category_button.phtml" />
+        </referenceContainer>
     </body>
 </page>
