--- a/raww/Magento_Theme/web/css/source/_footer.less
+++ b/raww/Magento_Theme/web/css/source/_footer.less
@@ -185,7 +185,7 @@
             }
         }
     }
-    .item {
+    .footer-nav .item {
         &.product {
             display: none;
         }
