--- a/raww/Magento_Cms/templates/best_seller.phtml
+++ b/raww/Magento_Cms/templates/best_seller.phtml
@@ -11,4 +11,40 @@
         ->setBlockId('raww-best_seller-background_mobile')
         ->toHtml()
     ?>
+    <?php 
+        echo $block->getLayout()
+        ->createBlock('Magento\Cms\Block\Block')
+        ->setBlockId('raww-best_seller-product')
+        ->toHtml()
+    ?>
 </div>
+<script>
+     require([
+      'jquery',
+      'slick',
+      'domReady!'
+   ], function ($) {
+      $(".product-items").slick({
+        dots: false,
+        infinite: true,
+        autoplay: false,
+        autoplaySpeed: 2500,
+        arrows: true,
+        fade: false,
+        loop: false,
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        responsive: [
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            }
+        );
+    });
+
+</script>
