--- a/raww/Magento_Cms/web/css/source/_extend.less
+++ b/raww/Magento_Cms/web/css/source/_extend.less
@@ -1,3 +1,5 @@
+@import '_bestseller.less';
+
 //
 //  Common
 //  _____________________________________________
@@ -104,8 +106,11 @@
     // Best Seller Css
     .best-seller {
         line-height: 0;
+        position: relative;
         img {
             width: 100%;
+            position: absolute;
+            z-index: -1;
         }
     }
 
@@ -158,7 +163,7 @@
             display: block;
         }
         &-content {
-            top: 50%;
+            top: 45%;
             left: 50%;
             width: 80%;
             transform: translate(-53%, 0%);
