--- a/raww/Magento_Theme/templates/html/copyright.phtml
+++ b/raww/Magento_Theme/templates/html/copyright.phtml
@@ -4,7 +4,7 @@
  * See COPYING.txt for license details.
  */
 ?>
-<small class="copyright page-main-copy">
+<small class="copyright page-main">
     <div class="copyright__text">
         <?php 
             echo $block->getLayout()
