--- a/raww/Magento_Cms/web/css/source/_bestseller.less
+++ b/raww/Magento_Cms/web/css/source/_bestseller.less
@@ -56,14 +56,14 @@
                 }
             }
             &-prev::before {
-                font-family: "Font Awesome 5 Free";
+                font-family: @font-family__fa;
                 content: "\f060";
                 font-size: @font-size-28;
                 color: @color-white;
                 opacity: 1;
             }
             &-next::before {
-                font-family: "Font Awesome 5 Free";
+                font-family: @font-family__fa;
                 content: "\f061";
                 font-size: @font-size-28;
                 color: @color-white;
