--- a/raww/web/css/source/_theme.less
+++ b/raww/web/css/source/_theme.less
@@ -77,6 +77,10 @@
 @font-family-name__la: 'la';
 @font-family__la: @font-family-name__la, @font-family__sans-serif;
 
+//font icon awe
+@font-family-name__fa: 'fa';
+@font-family__fa: @font-family-name__fa, @font-family__sans-serif;
+
 //  Color nesting
 @panel__background-color: @color-gray-light0;
 @border-color__base: @color-gray80;
