--- a/raww/web/css/source/_typography.less
+++ b/raww/web/css/source/_typography.less
@@ -77,6 +77,29 @@
         @font-style: normal,
         @font-display: swap
     );
+
+    //fonts aw
+    .lib-font-face(
+        @family-name: @font-family-name__fa,
+        @font-path: '@{baseDir}fonts/fa-brands-400',
+        @font-weight: 600,
+        @font-style: normal,
+        @font-display: swap
+    );
+    .lib-font-face(
+        @family-name: @font-family-name__fa,
+        @font-path: '@{baseDir}fonts/fa-regular-400',
+        @font-weight: 600,
+        @font-style: normal,
+        @font-display: swap
+    );
+    .lib-font-face(
+        @family-name: @font-family-name__fa,
+        @font-path: '@{baseDir}fonts/fa-solid-900',
+        @font-weight: 600,
+        @font-style: normal,
+        @font-display: swap
+    );
 }
 
 //
