--- a/raww/Magento_Theme/web/css/source/_header.less
+++ b/raww/Magento_Theme/web/css/source/_header.less
@@ -225,8 +225,7 @@
             letter-spacing: 0.65px;
             position: relative;
             &::after {
-                font-family: "Font Awesome 5 Free";
-                font-weight: 900;
+                font-family: @font-family__fa;
                 content: "\f0d7";
                 position: absolute;
                 font-size: @font-size-12;
